+ New language added

--- a/template/en-GB.tpl_shaper_helix3.ini
+++ b/template/en-GB.tpl_shaper_helix3.ini
@@ -1,10 +1,10 @@
-;Common
+; Common
 HELIX_YES="Yes"
 HELIX_NO="No"
 HELIX_SHOW="Show"
 HELIX_HIDE="Hide"
 
-;Basic Tab
+; Basic Tab
 JDETAILS="<i class='fa fa-home'></i>Basic"
 
 HELIX_GLOBAL="Global"
@@ -66,7 +66,7 @@ HELIX_COPYRIGHT_DESC="Show or hide copyright information."
 HELIX_COMPYRIGHT_TEXT="Copyright Notice"
 HELIX_COMPYRIGHT_TEXT_DESC="The Copyright Notice should contain any necessary copyright notice for claiming the intellectual property, and should identify the current owner(s) of the copyright for the content. All HTML tags are allowed."
 
-;Social Icon
+; Social Icon
 HELIX_SOCIAL_ICONS="Social Icons"
 HELIX_SOCIAL_ICONS_DESC="Enable this option to show social icons."
 HELIX_SOCIAL_ICON_FACEBOOK="Facebook URL"
@@ -89,14 +89,14 @@ HELIX_SOCIAL_ICON_FLICKR="Flickr URL"
 HELIX_SOCIAL_ICON_FLICKR_DESC="Input the full URL to your Flickr profile page."
 HELIX_SOCIAL_ICON_SKYPE="Skype Username"
 HELIX_SOCIAL_ICON_SKYPE_DESC="Input your Skype Name, a unique user name that is used to sign in to Skype."
-HELIX_SOCIAL_ICON_WHATSAPP="Whtasapp Username"
-HELIX_SOCIAL_ICON_WHATSAPP_DESC="Input your whatsapp user name, a unique user name that is used to sign in to Whatsapp."
+HELIX_SOCIAL_ICON_WHATSAPP="WhatsApp Username"
+HELIX_SOCIAL_ICON_WHATSAPP_DESC="Input your WhatsApp username"
 HELIX_SOCIAL_ICON_VK="VK Username"
 HELIX_SOCIAL_ICON_VK_DESC="Input the full URL to your VK profile page."
 HELIX_SOCIAL_ICON_CUSTOM="Custom"
 HELIX_SOCIAL_ICON_CUSTOM_DESC="Insert your custom url with fontawesome icon, eg. fa-facebook http://joomshaper.com"
 
-;Contact Info
+; Contact Info
 HELIX_CONTACT_INFO="Contact Information"
 HELIX_ENABLE_CONTACT_INFO="Enable"
 HELIX_ENABLE_CONTACT_INFO_DESC="Enable this option to show contact information."
@@ -109,7 +109,7 @@ HELIX_CONTACT_EMAIL_DESC="Add email address here. Leave blank if no email is req
 HELIX_CONTACT_OPEN_HOURS="Open Hours"
 HELIX_CONTACT_OPEN_HOURS_DESC="Insert your open hours here. eg. Mon - Fri 8:00 - 17:30"
 
-;Coming Soon
+; Coming Soon
 HELIX_COMINGOON="Coming Soon"
 HELIX_COMINGSOON_MODE="Coming Soon Mode"
 HELIX_COMINGSOON_BG="Coming Soon Background"
@@ -124,14 +124,14 @@ HELIX_COMINGSOON_DATE_DESC="Insert date used for Countdown timer"
 HELIX_COMINGSOON_CONTENT="Content"
 HELIX_COMINGSOON_CONTENT_DESC="Description field so you can let visitors know what’s coming. Tip: Add also contact info."
 
-;error
+; error
 HELIX_ERRORPAGE="Error Page"
 HELIX_ERRORPAGE_BG="Backgound Image"
 HELIX_ERRORPAGE_BG_DESC="Select a Error Page Background image"
 HELIX_ERRORPAGE_LOGO="Error Page Logo"
 HELIX_ERRORPAGE_LOGO_DESC="Select a Error Page logo, if leave it blank then will get template logo."
 
-;Presets Tab
+; Presets Tab
 COM_TEMPLATES_PRESET_FIELDSET_LABEL = "<i class='fa fa-paint-brush'></i>Presets"
 HELIX_PRESETS="Preset Styles"
 HELIX_STYLEING_OPTIONS="Styling Options"
@@ -145,7 +145,7 @@ HELIX_TEXT_COLOR_DESC="The color attribute specifies the main color of the text.
 HELIX_MAJOR_COLOR="Major Color"
 HELIX_MAJOR_COLOR_DESC="Major color setting based on chosen Preset"
 
-;Layout Tab
+; Layout Tab
 COM_TEMPLATES_LAYOUT_FIELDSET_LABEL="<i class='fa fa-list-alt'></i>Layout"
 HELIX_SAVE_COPY="Save as Copy"
 HELIX_DELETE="Delete"
@@ -224,7 +224,7 @@ HELIX_TABLET_LAYOUT_DESC="Set the class of this column for tablets."
 HELIX_MOBILE_LAYOUT="Mobile Layout"
 HELIX_MOBILE_LAYOUT_DESC="Set the class of this column for mobile devices"
 
-;Mega Menu
+; Mega Menu
 COM_TEMPLATES_MENU_FIELDSET_LABEL="<i class='fa fa-list-ul'></i>Menu"
 HELIX_MEGAMENU="Mega Menu"
 HELIX_MEGAMENU_SELECT="Select Menu"
@@ -232,6 +232,7 @@ HELIX_MEGAMENU_SELECT_DESC="Select menu to display as Main menu"
 HELIX_MENU_TYPE="Menu Type"
 HELIX_MENU_TYPE_DESC="Select a suitable menu type from the list. You need to add module to offcanvas position from the Module Manager."
 HELIX_MEGAMENU_OFFCANVAS="Mega Menu &amp; Off Canvas"
+HELIX_MEGAMENU="Mega Menu"
 HELIX_OFFCANVAS="Off Canvas"
 HELIX_MEGAMENU_DROPDOWN_WIDTH="Dropdown Width"
 HELIX_MEGAMENU_DROPDOWN_WIDTH_DESC="Input width of mega menu dropdown."
@@ -245,25 +246,32 @@ HELIX_ELASTIC_ANIMATION="Elastic"
 HELIX_SLIDEDOWN_ANIMATION="Slide Down"
 HELIX_DROPIN_ANIMATION="Drop IN"
 HELIX_TWIST_ANIMATION="Twist"
+
 HELIX_MENU_OFFCANVAS_ANIMATION="Off canvas Animation"
 HELIX_MENU_OFFCANVAS_ANIMATION_DESC="Select a animation for off canvas menu"
+
 HELIX_OFFANIMATION_DEFAULT="Default"
 HELIX_OFFANIMATION_FULLSCREEN="FullScreen"
 HELIX_OFFANIMATION_FULLSCREEN_FROM_TOP="FullScreen From Top"
 HELIX_OFFANIMATION_SLIDE_RIGHT="Slide Right"
 HELIX_OFFANIMATION_DARK_PLUS="Dark Plus"
+
 HELIX_NO_MODULE_OFFCANVAS="Please publish modules in <strong>offcanvas</strong> position."
 HELIX_MEGA_MENU_BG_COLOR="Dropdown background color"
 HELIX_MEGA_MENU_BG_COLOR_DESC="Select a mega menu dropdown background color"
 HELIX_MEGA_MENU_TEXT_COLOR="Dropdown Text Color"
 HELIX_MEGA_MENU_TEXT_COLOR_DESC="Select a mega menu dropdown text color"
 
-;Typography
+; Typography
 COM_TEMPLATES_TYPOGRAPHY_FIELDSET_LABEL="<i class='fa fa-font'></i>Typography"
 HELIX_FONT_FAMILY="Font Family"
 HELIX_FONT_WEIGHT_STYLE="Font Weight & Style"
 HELIX_FONT_SUBSET="Font Subset"
 HELIX_FONT_SIZE="Font Size"
+HELIX_GFONT_API="Google Font API"
+HELIX_GFONT_API_DESC="Get your API key from the link given above and click the <strong>Save</strong> button after inserting the API Key."
+HELIX_GOOGLE_FONTS_LIST="Google Fonts List"
+HELIX_GOOGLE_FONTS_LIST_DESC="You may require <strong>Google Fonts API Key</strong> to update the font list. Get your API Key from here: <a href='https://developers.google.com/fonts/docs/developer_api' target='_blank'>https://developers.google.com/fonts/docs/developer_api</a>"
 HELIX_UPDATE_FONTS_LIST="Update Fonts List"
 HELIX_UPDATE_FONTS_LIST_DESC="It allows you to refresh the list of available Google fonts. If there are any new ones, this button allows you to quickly update fonts with just one click, and they will be automatically added in to Helix 3 Framework."
 HELIX_UPDATE_FONTS_CLICK="One Click update"
@@ -292,7 +300,7 @@ CUSTOM_FONT_DESC="Apply this google font to any custom CSS selector."
 HELIX_FONT_CUSTOM_SELECTORS="CSS Selectors"
 HELIX_FONT_CUSTOM_SELECTORS_DESC="Add custom CSS selectors. Separated by comma."
 
-;Custom Code
+; Custom Code
 COM_TEMPLATES_CUSTOM_CODE_FIELDSET_LABEL="<i class='fa fa-code'></i>Custom Code"
 HELIX_CUSTOM_CODE="Custom Code"
 HELIX_BEFORE_HEAD="Before &lt;/head&gt;"
@@ -304,13 +312,13 @@ HELIX_CUSTOM_CSS_DESC="You can use custom CSS to add your own styles or overwrit
 HELIX_CUSTOM_JS="Custom Javascript"
 HELIX_CUSTOM_JS_DESC="You can add custom javascripts code. It loads your custom Javascript file after all other Javascript files (except special hard coded occasions), allowing you to be the last one who will affect your website."
 
-;Advanced
+; Advanced
 COM_TEMPLATES_ADVANCE_FIELDSET_LABEL="<i class='fa fa-cog'></i>Advanced"
 HELIX_CACHE_SETTINGS="Compression Settings"
 HELIX_CSS_COMPRESS="Compress CSS"
 HELIX_CSS_COMPRESS_DESC=""
 HELIX_JS_COMPRESS="Compress Javascripts"
-HELIX_JS_COMPRESS_DESC=""
+HELIX_CSS_COMPRESS_DESC=""
 HELIX_EXCLUDE_JS="Exclude Javascript"
 HELIX_EXCLUDE_JS_DESC="Enter the names of javascript files seperated by comma that you don't want to compress. e.g. jquery.min.js, main.js"
 HELIX_LESS="Less"
@@ -321,7 +329,7 @@ HELIX_IMPORT_EXPORT_FIELD='Settings Import/Export'
 HELIX_SETTINGS_EXPORT='Export Settings'
 HELIX_SETTINGS_IMPORT='Import Settings'
 
-;Blog
+; Blog
 COM_TEMPLATES_BLOG_FIELDSET_LABEL="<i class='fa fa-thumb-tack'></i>Blog"
 HELIX_COMMENTS="Comments Settings"
 HELIX_COMMENTING_ENGINE="Commenting Engine"
@@ -337,11 +345,11 @@ HELIX_DISQUS_DEV_MODE_DESC="Enable this option if you are testing behind a firew
 HELIX_INTENSEDEBATE_ACC="IntenseDebate Account"
 HELIX_INTENSEDEBATE_ACC_DESC="Set the intenseDebate account"
 HELIX_FB_ID="Facebook Application ID"
-HELIX_FB_ID_DESC="Set the Facebook Application ID, visit https://developers.facebook.com/apps to get application id"
+HELIX_FB_ID_DESC="Set the Facebook Application ID, visit https://developers.facebook.com/apps to get application id" 
 HELIX_FB_COMMENTS_WIDTH="Comments Width"
 HELIX_FB_COMMENTS_WIDTH_DESC="Width of the comments plugin in pixel, eg. 500. Note: Facebook doesn't provide a Facebook Comment code for responsive (fluid grid) websites. It uses only static width for comments box."
 HELIX_FB_COMMENTS_PER_PAGE="Comments Per Page"
-HELIX_FB_COMMENTS_PER_PAGE_DESC="Set the number of comments to displayed per page"
+HELIX_FB_COMMENTS_PER_PAGE_DESC="Set the number of comments to displayed per page" 
 HELIX_COMMENTS_COUNT="Comments Count"
 HELIX_COMMENTS_COUNT_DESC="Show comments count on blog view or frontpage"
 HELIX_SOCIAL_SHARE="Social Share"
@@ -376,14 +384,14 @@ HELIX_BLOG_LIST_IMAGE_THUMBNAIL="Thumbnail"
 HELIX_BLOG_LIST_IMAGE_MEDIUM="Medium"
 HELIX_BLOG_LIST_IMAGE_LARGE="large"
 
-;Update-tab
+; Update-tab
 COM_TEMPLATES_LICENSEUPDATE_FIELDSET_LABEL="<i class='fa fa-refresh'></i> Update Settings"
 HELIX3_JOOMSHAPER_EMAIL="Email Address"
 HELIX3_JOOMSHAPER_EMAIL_DESC="Enter your JoomShaper user account email address."
 HELIX3_JOOMSHAPER_LICENSE_KEY="License Key"
 HELIX3_JOOMSHAPER_LICENSE_KEY_DESC="Enter your subscription license key. You can get the license key your JoomShaper account dashboard."
 
-;Documenation Tab
+;Documenation Tab;
 COM_TEMPLATES_DOCUMENTATION_FIELDSET_LABEL="<i class='fa fa-book'></i> Documentation"
 
 HELIX_CLICK_TO_VIEW="Click To View"
@@ -394,10 +402,10 @@ HELIX3_DOCUMENTATION="Helix3 Documentation"
 HELIX3_DOCUMENTATION_DESC="Click the button to view helix3 documentation"
 
 
-;Assignment
+; Assignment
 COM_TEMPLATES_MENUS_ASSIGNMENT="<i class='fa fa-check-square-o'></i>Assignment"
 
-;Page Builder Addons
+; Page Builder Addons
 COM_SPPAGEBUILDER_ADDON_IMAGE_CONTENT="Image Content"
 COM_SPPAGEBUILDER_ADDON_IMAGE_CONTENT_DESC="Addon to add image and content together."
 COM_SPPAGEBUILDER_ADDON_IMAGE_CONTENT_TITLE="Addon Title"
@@ -410,7 +418,7 @@ COM_SPPAGEBUILDER_ADDON_IMAGE_CONTENT_IMAGE_WIDTH_DESC="Set the width of the ima
 COM_SPPAGEBUILDER_ADDON_IMAGE_CONTENT_IMAGE_ALIGNMENT="Image Position"
 COM_SPPAGEBUILDER_ADDON_IMAGE_CONTENT_IMAGE_ALIGNMENT_DESC="Set image section position to left or right."
 
-;Front-end
+; Front-end
 HELIX_MONTH="Month"
 HELIX_MONTHS="Months"
 HELIX_DAY="Day"
